[package]
name = "pc_viewer"
version = "0.1.0"
edition = "2021"

[[bin]] # This is also a runnable binary
name = "pc_viewer"
path = "src/main.rs"

[dependencies]
pc_core = { path = "../pc_core" }
pc_io = { path = "../pc_io" }
hdf5 = "0.8.1"
ndarray = "0.17.1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3.20"
egui = "0.33.0"
eframe = { version = "0.33.0", features = ["persistence"] }
egui_plot = "0.34.0"