[package]
name = "viewer"
version = "0.1.0"
edition = "2021"



[dependencies]
core = { path = "../core" }
io = { path = "../io" }
hdf5 = "0.8.1"
ndarray = "0.15.6"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3.20"
egui = "0.33.0"
eframe = { version = "0.33.0", features = ["persistence"] }
egui_plot = "0.34.0"